# hgcal-online-reco

./: .gitignore  README.md  analyze.py  bug_report.md  debug_energy.py  debug_plot.py  debug_plot_v2.py  debug_uproot.py  download.sh  encode_wafers.py  environment.yml  load_events.py  plot_data.py  plot_data_old.py
hgcal_viewer/: .gitignore  README.md  pyproject.toml
hgcal_viewer/hgcal_viewer/: __init__.py  __main__.py  app.py  filters.py
hgcal_viewer/hgcal_viewer/data/: geometry.py  loader.py  pdg.py
hgcal_viewer/hgcal_viewer/panels/: cluster_summary.py  energy_dist.py  view3d.py  wafer_counts.py
notebook/: tutorial.ipynb
scripts/: Plot.ipynb  download_data.sh  extract_hgcal_features.py
