[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hgcal-viewer"
version = "0.1.0"
description = "Interactive HGCAL event visualization dashboard"
requires-python = ">=3.10"
dependencies = [
    "dash>=4.0",
    "plotly>=6.0",
    "uproot>=5.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.scripts]
hgcal-viewer = "hgcal_viewer.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hgcal_viewer*"]
